# LibOpenCCiOS

./: .gitignore  CMakeLists.txt  LibOpenCCiOS.podspec  README.md  build.sh  build_binary_release.sh  build_xcframework.sh  download_dicts.sh  interface.cpp  opencc.h
CocoaPodsPub/: LibOpenCCiOS.podspec
CocoaPodsPubBinary/: LibOpenCCiOS.podspec
Example/: Podfile
Example/Example/: AppDelegate.swift  Example-Bridging-Header.h  SceneDelegate.swift  ViewController.swift
Example/Example.xcodeproj/: project.pbxproj
Example/Example/Base.lproj/: Main.storyboard
include/: opencc.h
